# picture-viewer

./: .tool-versions  Cargo.toml  README.md  taskfile.yaml
src/: args.rs  loader.rs  main.rs
